# tg-bot

./: .gitignore  pyproject.toml
src/: config.py  handler.py  main.py  requester.py  settings.py
